--- a/apps/website/app/scss/components/_menu.scss
+++ b/apps/website/app/scss/components/_menu.scss
@@ -210,7 +210,8 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    position: relative;
+    position: sticky;
+    top: 100px;
     z-index: 1;
 
     &__item {
@@ -226,13 +227,12 @@
         letter-spacing: 0.25px;
         color: $charcoal;
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         gap: 10px;
         padding: 12px 0;
 
         svg {
           flex-shrink: 0;
-          margin-top: 2px;
 
           @include screen-large {
             display: none;
